--- a/server/.gitignore
+++ b/server/.gitignore
@@ -3,3 +3,17 @@
 /dist
 
 .env*
+
+logs
+*.log*
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
