Wired up client, improved server build pipeline

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc --watch",
-    "build": "tsc"
+
+    "prebuild:linux": "rm -rf dist && mkdir dist",
+    "prebuild:win": "IF EXIST 'dist' (rmdir /s /q dist) && mkdir dist",
+    
+    "build:linux": "esbuild ./src/index.ts --bundle --minify --sourcemap --platform=node --target=es2024 --outfile=dist/index.js",
+    "build:win": "esbuild ./src/index.ts --bundle --minify --sourcemap --platform=node --target=es2024 --outfile=dist/index.js",
+    
+    "postbuild:linux": "cd dist && zip -r index.zip index.js*",
+    "postbuild:win": "cd dist && tar.exe -a -c -f index.zip index.js*",
+
+    "deploy": "aws"
   },
   "keywords": [],
   "author": "Dotun Ogunsakin <email@dotun.me> (https://dotun.me/)",
@@ -14,6 +24,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/node": "^24.5.2",
+    "esbuild": "^0.25.10",
     "typescript": "^5.9.2"
   },
   "dependencies": {
